force-app/main/default/objects/Empenho__c/Empenho__c.object-meta.xml
<CustomObject>
    <label>Empenho</label>
    <nameField>
        <displayFormat>EMP-{0000000}</displayFormat>
        <label>Empenho</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Empenhos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>