force-app/main/default/objects/Empenho__c/fields/DataVoo__c.field-meta.xml
<CustomField>
    <fullName>DataVoo__c</fullName>
    <formula>Servico__r.Voo__r.DataVoo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Voo</label>
    <type>DateTime</type>
</CustomField>