force-app/main/default/objects/Empenho__c/fields/NomePassageiro__c.field-meta.xml
<CustomField>
    <fullName>NomePassageiro__c</fullName>
    <formula>Servico__r.Passageiro__r.NomeContato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Passageiro</label>
    <type>Text</type>
</CustomField>