force-app/main/default/objects/Empenho__c/fields/Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Pagamento__c</fullName>
    <label>Pagamento</label>
    <referenceTo>Pagamento__c</referenceTo>
    <relationshipLabel>Empenhos</relationshipLabel>
    <relationshipName>Empenhos</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>