force-app/main/default/objects/Empenho__c/fields/RevoSeatEmpenhado__c.field-meta.xml
<CustomField>
    <fullName>RevoSeatEmpenhado__c</fullName>
    <label>RevoSeat Empenhado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>