force-app/main/default/objects/Empenho__c/fields/RotaVoo__c.field-meta.xml
<CustomField>
    <fullName>RotaVoo__c</fullName>
    <formula>Servico__r.Voo__r.Rota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rota Voo</label>
    <type>Text</type>
</CustomField>