force-app/main/default/objects/Empenho__c/fields/Servico__c.field-meta.xml
<CustomField>
    <fullName>Servico__c</fullName>
    <label>Serviço</label>
    <referenceTo>Servico__c</referenceTo>
    <relationshipLabel>Empenhos</relationshipLabel>
    <relationshipName>Empenhos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>