force-app/main/default/objects/Empenho__c/fields/ValorEmpenho__c.field-meta.xml
<CustomField>
    <fullName>ValorEmpenho__c</fullName>
    <label>Valor do Empenho</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>